# io_file_validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml  publish_pypi.yml
file_validator/: validator.py
io_file_validator/: validator.py
tests/: test_custom_validator_xml.py  test_validator.py
