[tool.poetry]
name = "io_file_validator"
version = "0.1.1"
description = "File Validator Tool helps you validate your data with a plethora of formats"
authors = ["Manrique Vargas <machomaxg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
validators = "^0.28.1"
pipx = "^1.5.0"
wheel = "*"
pytest = "7.4.0"
requests = "2.31.0"
pandera = { version = "^0.7.2", extras = ["io"] }

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
pylint = "^3.2.0"
twine = "*"
pydiggs = "0.1.3"
lxml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"